src/objects/c2g__codaIncScheduleStagingJnlLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpincschedulestagingjnllineitem</customHelpPage>
    <description>Handles errors during the income schedule (revenue recognition) process at the detail level.</description>
    <fields>
        <fullName>c2g__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__IncScheduleStagingJnl__c</fullName>
        <label>Inc Schedule Staging Jnl</label>
        <referenceTo>c2g__codaIncScheduleStagingJnl__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsList</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year/Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsPeriod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduleLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Line Item</label>
        <referenceTo>c2g__codaScheduleLineItem__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsSLIList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit Of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DEPRECATED:Inc Sch Staging Jnl Line Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inc Schedule Staging Jnl Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>